--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -27,6 +27,7 @@
 	  <p style="color:#e8792a">多款式，均码</p>
 	  <p><a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uO9ALgEo18Zz7dcDyEqiUbQ&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
 	  <p id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="1" id="id_input1"> 我选择时尚的斗篷/披风</p>{% csrf_token %}
+	  <p style="color:red">得票率：{{ ratio1 }}%</p>
 	</div>
       </div>
 
@@ -46,6 +47,7 @@
 	  <p style="color:#e8792a">多款式，多尺寸</p>
 	  <p><a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uLzyCZkBcdK1rU9-bjKOkco&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">商品详情 >></a></p>
 	  <p id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="2" id="id_input2"> 我选择时尚的分腿睡袋</p>
+	  <p style="color:red">得票率：{{ ratio2 }}%</p>
 	</div>
       </div>
       <div class="row">
