--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -39,7 +39,7 @@
     <p style="color:red"> 1）每个努力过的妈妈，都有惊喜！<a href="/weixin/inviteresult/">点击查看您获得的奖品>></a></p>
   </div>
 </div>
-
+{% if openid == "oMt59uE55lLOV2KS6vYZ_d0dOl5c" %}
 {% for sample in samples %}
 <div class="panel panel-default" style="margin-top:5px">
   <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
@@ -49,14 +49,7 @@
       <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
       <div class="row">
 	<div class="col-xs-12">
-	  <p style="color:red">公告：最后{{ slots_left }}份中奖名单将在8月11日9：00之前一起公布（周六晚不会公布名单，大家好好休息哦）！ </p>
-	  <p>妈妈们申请踊跃，优尼世界决定<font style="color:red">增加150个名额</font>，总计1000个。快告诉朋友来申请吧！</p>
-	  {% if ended %}
-	  <p style="color:red;font-size:20px">试用申请已结束，优尼世界感谢您的参与！</p>
-	  {% else %}
-	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
-	  {% endif %}
-	  <p style="color:red"> 1）所有审核名单已经公布，请大家 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
+	  <p>距离试用申请开始还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额等您来抢哦！</p>
 	</div>
       </div>
       <div class="row">
@@ -66,11 +59,13 @@
 	    <img src="{{ sample.pic_url }}" alt="...">
 	  </a>
 
+<!--
 	  {% if today_orders > 1000 %}
 	  <p>超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
 	  {% else %}
 	  <p>今日<font style="color:red; font-size:20px">{{ today_orders }}</font>人已申请</p>
 	  {% endif %}
+-->
 	</div>
 
 	<div class="col-xs-6">
@@ -82,50 +77,45 @@
 	      <option value="01">黄色</option>
 	    </select>
 	  </p>
+<!--
 	  <p>尺寸：
 	    <select class="form-control input-sm" name="size" id="id_size">
 	      <option value="0">选择</option>
 	      <option value="1">90cm</option>
 	      <option value="2">120cm</option>
-	      <!--<option value="3">140cm</option>-->
 	    </select>
 	  </p>
 	  <p>厚度：
 	    <select class="form-control input-sm" name="weight" id="id_weight">
 	      <option value="0">选择</option>
 	      <option value="1">春秋薄款</option>
-	      <!--<option value="2">春秋中厚款</option>-->
 	      <option value="3">春秋加厚款</option>
 	    </select>
 	  </p>
+-->
 	  <input class="form-control" type="text" placeholder="VIP邀请码" id="id_vipcode" name="vipcode"/>
 	</div>
       </div>
       
       <div class="row" style="text-align:center">
 	<p id="id_msg" style="text-align:center;color:red"></p>
-	{% if user_isvalid %}
 	{% if order_exists %}
 	<a href="/weixin/sampleads/{{ pk }}/">您的试用申请已经提交！查看 >></a>
-	{% else %}
-	{% if ended %}
-	<p style="color:red;font-size:20px">试用申请已结束，感谢您的参与！</p>
 	{% else %}
 	<div class="col-xs-12" style="text-align:center; margin-top:10px">
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
 	</div>
 	{% endif %}
-	{% endif %}
-	{% else %}
+<!--
 	<p style="color:red">亲，到微信菜单【我的】->【宝宝档案】完善信息，绑定手机号码，<font style="font-size:20px">申请才会开放哦！</font></p>
-	{% endif %}
+-->
       </div>
     </form>      
     
   </div>
 </div>
 {% endfor %}
-
+{% endif %}
 <!--
 <div class="row">
   <div class="col-xs-12">
