--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -100,7 +100,7 @@
 	{% if started %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
         {% else %} 
-	  <input type="button" class="btn btn-warning" disabled="disabled" value="提交试用申请"/>
+	  <input type="button" class="btn btn-warning" disabled="disabled" value="申请待开放..."/>
         {% endif %}
 	</div>
 	{% endif %}
