--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -6,7 +6,7 @@
 {% block container %}
 
 <div class="container-fluid">
-
+<!--
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:#e8792a">9月免费试用投票</div>
     <div class="panel-body">
@@ -31,11 +31,11 @@
       </div>
     </div>
   </div>
+-->
 
-{% if openid == "oMt59uE55lLOV2KS6vYZ_d0dOl5c" %}
 {% for sample in samples %}
 <div class="panel panel-default" style="margin-top:5px">
-  <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
+  <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }} (得票率:52%)</div>
   <div class="panel-body">
     
     <form class="form-group" method="post" action="/weixin/sampleapply/" onsubmit="return check()">{% csrf_token %}
@@ -88,7 +88,7 @@
 -->
           {% if vip_exists %}
           <p style="color:red">您具有通关特权，无需邀请码!</p>
-	  <input class="form-control" type="text" placeholder="VIP邀请码" id="id_vipcode" disabled="disabled" name="vipcode"/>
+	  <input class="form-control" type="text" placeholder="无需VIP邀请码" id="id_vipcode" disabled="disabled" name="vipcode"/>
 	  {% else %}
 	  <input class="form-control" type="text" placeholder="VIP邀请码" id="id_vipcode" name="vipcode"/>
 	  {% endif %}
@@ -118,8 +118,8 @@
   </div>
 </div>
 {% endfor %}
-{% endif %}
-<!--
+
+
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">申请须知</h5>
@@ -133,11 +133,12 @@
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">常见问题</h5>
-    <p>1) VIP邀请码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找!</font></p>
+    <p>1) VIP邀请码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找！也可向申请过的朋友索要VIP邀请码。</font></p>
     <p>2) 我收不到手机验证码? <font style="color:red">微信中输入0，根据提示操作。若一份钟没收到短信验证码，可以重复。</font></p>
+    <p>3) 什么是通关特权？<font style="color:red">在8月15日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都具有通关特权，无需输入VIP邀请码！</font></p>
   </div>
 </div>
--->
+
 
 <div class="footer">
   <p>© Uni Littles 2014</p>
