--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -55,7 +55,7 @@
     <div class="panel-heading" style="color:orange">历史中奖名单公示</div>
     <div class="panel-body">
       <p>为了保证活动的公正性和真实性，我们保留历史中奖名单供查询。</p>
-      <a href="/weixin/finalist/1/1/">8月中奖名单 >></a>
+      <a href="/weixin/finallist/1/1/">8月中奖名单 >></a>
     </div>
   </div>
   
