--- a/shopmanager/shopapp/weixin/templates/weixin/final_list.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/final_list.html
@@ -6,17 +6,19 @@
 
 <div class="container-fluid">
   <div class="panel panel-default" style="margin-top:5px">
-    {% if batch == 1 %}
-    <div class="panel-heading">详细名单 (前五批)</div>
-    {% endif %}
-    {% if batch == 6 %}
+    {% if month == 8 %}
+    <div class="panel-heading">详细名单</div>
+    {% else %}
     <div class="panel-heading">详细名单 (第{{ batch }}批)</div>
     {% endif %}
     <div class="panel-body">
 
       <div class="row">
-	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖妈妈的手机号，以及VIP邀请码被使用次数。</p>
-	
+	{% if month == 8 %}
+	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖粉丝的手机号。</p>
+	{% else %}
+	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖粉丝的手机号和专属VIP邀请码被使用次数。</p>
+	{% endif %}
 	<div class="col-xs-4">
 	  <a href="/weixin/finallist/{{ batch }}/{{ prev_page }}/"><< 上一页</a>
 							  </div>
@@ -31,7 +33,11 @@
       
       <div class="list-group">
 	{% for item in items %}
+	{% if month == 8 %}
+	<a href="#" class="list-group-item">{{ forloop.counter }}: {{ item.0 }}</a>
+	{% else %}
 	<a href="#" class="list-group-item">{{ forloop.counter }}: {{ item.0 }}<span class="badge">{{ item.1 }}</span></a>
+	{% endif %}
 	{% endfor %}
       </div>
     </div>
