--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -105,7 +105,11 @@
 	{% if started %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
         {% else %} 
+	  {% if openid== "oMt59uE55lLOV2KS6vYZ_d0dOl5c" %}
+	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
+	  {% else %}
 	  <input type="button" class="btn btn-warning" disabled="disabled" value="申请待开放..."/>
+	  {% endif %}
         {% endif %}
 	</div>
 	{% endif %}
