temp render test

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-<!--
+  {% if False %}
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">9月试用审核状态</div>
     <div class="panel-body">
@@ -49,7 +49,7 @@
       {% endif %}
     </div>
   </div>
--->
+  {% endif %}
 
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">历史中奖名单公示</div>
