--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -6,7 +6,7 @@
 {% block container %}
 
 <div class="container-fluid">
-<!--
+  {% if False %}
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:#e8792a">9月免费试用投票</div>
     <div class="panel-body">
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
--->
+  {% endif %}
 
 {% for sample in samples %}
 <div class="panel panel-default" style="margin-top:5px">
@@ -52,13 +52,13 @@
 	    <img src="{{ sample.pic_url }}" alt="...">
 	  </a>
 
-<!--
+	  {% if False %}
 	  {% if today_orders > 1000 %}
 	  <p>超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
 	  {% else %}
 	  <p>今日<font style="color:red; font-size:20px">{{ today_orders }}</font>人已申请</p>
 	  {% endif %}
--->
+	  {% endif %}
 	</div>
 
 	<div class="col-xs-6">
@@ -70,7 +70,7 @@
 	      <option value="01">黄色小熊</option>
 	    </select>
 	  </p>
-<!--
+	  {% if False %}
 	  <p>尺寸：
 	    <select class="form-control input-sm" name="size" id="id_size">
 	      <option value="0">选择</option>
@@ -85,12 +85,15 @@
 	      <option value="3">春秋加厚款</option>
 	    </select>
 	  </p>
--->
+	  {% endif %}
+	  
           {% if vip_exists %}
           <p style="color:red">您具有通关特权，无需邀请码!</p>
 	  <input class="form-control" type="text" placeholder="无需VIP邀请码" id="id_vipcode" status="1" disabled="disabled" name="vipcode"/>
+	  <input type="hidden" name="vip_exists" value="1">
 	  {% else %}
 	  <input class="form-control" type="text" placeholder="VIP邀请码" id="id_vipcode" status="0" name="vipcode"/>
+	  <input type="hidden" name="vip_exists" value="0">
 	  {% endif %}
 	</div>
       </div>
