--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -54,7 +54,7 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">历史中奖名单公示</div>
     <div class="panel-body">
-      <p>所有中奖的亲们，请仔细阅读中奖页面的说明，务必在活动结束后<font style="color:red">5个工作日内</font>按照指示操作领取试用产品！非常感谢！</p>
+      <p>亲们，若您的申请已审核通过，请仔细阅读中奖页面的说明，务必在活动结束后<font style="color:red">5个工作日内</font>按照指示操作领取试用产品！非常感谢！</p>
       <p>为了保证活动的公正性和真实性，我们保留历史中奖名单供查询。</p>
       <a href="/weixin/finallist/1/1/8/">8月中奖名单 >></a>
     </div>
