change button type

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -113,7 +113,7 @@
 	  {% if openid == "oMt59uE55lLOV2KS6vYZ_d0dOl5c" %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
 	  {% else %}
-	  <button class="btn btn-warning" disabled="disabled">申请待开放...<button/>
+	  <button type="button" class="btn btn-warning" disabled="disabled">申请待开放...</button>
 	  {% endif %}
         {% endif %}
 	</div>
