check user valid when apply

--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -10,6 +10,9 @@
       <h4 class="panel-title">宝宝档案</h4>
     </div>
     <div class="panel-body">
+      {% if sample_count > 0 %}
+      <p style="color:red">特别提醒：填写宝宝档案、验证手机后，试用申请才能提交哦!</p>
+      {% endif %}
       <h5 style="color:#3071a9">出生/预产信息 </h5>
       <div class="row">
 	<div class="col-xs-3">
