--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -165,7 +165,7 @@
 
   function check() {
     {% if not user_isvalid %}
-    $("#id_redirect").css("display":"block");
+    //$("#id_redirect").css("display":"");
     return false;
     {% else %}
     var color = $("#id_color").val();
