--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -105,7 +105,7 @@
 	{% if order_exists %}
 	<a href="/weixin/sampleads/{{ pk }}/">您的试用申请已经提交！查看 >></a>
 	{% else %}
-	<p id="id_redirect" style="text-align:center;color:red;display:none">亲，完善宝宝档案及验证手机号码，才能提交申请哦。<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/babyinfo/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">点击完善 >></a></p>
+	<p id="id_redirect" style="text-align:center;color:red;"></p>
 	<div class="col-xs-12" style="text-align:center; margin-top:10px">
 	{% if started %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
@@ -166,7 +166,7 @@
   function check() {
     {% if not user_isvalid %}
     var redirect = $("#id_redirect");
-    redirect.css("display":"block");
+    redirect[0].innerHTML = "亲，完善宝宝档案及验证手机号码，才能提交申请哦。<a href='https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/babyinfo/&response_type=code&scope=snsapi_base&state=135#wechat_redirect'>点击完善 >></a>";
     return false;
     {% else %}
     var color = $("#id_color").val();
