--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -17,10 +17,10 @@
     <div class="panel-heading" style="color:orange">9月试用审核状态</div>
     <div class="panel-body">
       <p>亲，您的申请正在审核中。</p>
-      <p>您的专属VIP邀请码是<font style="color:red">{{ vipcode }}</font>，已被使用<font style="color:red">{{ usage_count }}次</font>，请继续加油！</p>
-      <p style="color:red">专属VIP码使用超过10次，您的中奖几率将大大增加！</p>
-      <p style="color:red">专属VIP码使用超过20次，您就具有决定性的竞争力啦！！</p>
-      <p style="color:#029fd6">活动数据表明：每有1000位妈妈申请，只有不到2位的VIP邀请码能被使用超过9次。所以，大多数妈妈真的是不会玩嘛！记住，一定要追着妈妈好友闺密使用你的邀请码！她们申请到了会感谢您！如果您能让VIP邀请码被朋友使用10次以上，中奖概率大大增加，一切都变得so so so easy！！！</p>
+      <p>您的专属VIP邀请码<font style="color:red">{{ vipcode }}</font>已被使用<font style="color:red">{{ usage_count }}次</font>，请继续加油！</p>
+      <h5>申请攻略：</h5>
+      <p style="color:#029fd6">活动数据表明：每1000位妈妈中，只有不到2位的VIP邀请码能被使用超过9次。所以，只要您稍稍用心，一切都变得so so so easy！！ <font style="color:red">记住，一定要追着妈妈好友闺密使用你的邀请码！她们申请到了会感谢您！</font></p>
+      <p style="color:red">专属VIP码使用超过10次，您的中奖几率将大大增加！<br>专属VIP码使用超过20次，您就具有决定性的竞争力啦！！</p>
       <p>亲，分享、邀请，继续加油吧，惊喜等着您！</p>
 
       {% if False %}
