--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -17,9 +17,9 @@
     <div class="panel-heading" style="color:orange">9月试用审核状态</div>
     <div class="panel-body">
       <p>亲，您的申请正在审核中。</p>
-      <p>您的专属VIP邀请码<font style="color:red">{{ vipcode }}</font>已被使用<font style="color:red">{{ usage_count }}次</font>，请继续加油！</p>
+      <p>专属VIP邀请码<font style="color:red;font-size:20px">{{ vipcode }}</font>已被使用<font style="color:red;font-size:20px">{{ usage_count }}次</font>，请继续加油！</p>
       <h5>申请攻略：</h5>
-      <p style="color:#029fd6">活动数据表明：每1000位妈妈中，只有不到2位的VIP邀请码能被使用超过9次。所以，只要您稍稍用心，一切都变得so so so easy！！ <font style="color:red">记住，一定要追着妈妈好友闺密使用你的邀请码！她们申请到了会感谢您！</font></p>
+      <p style="color:#029fd6">活动数据表明：每1000位妈妈中，只有不到2位的VIP邀请码能被使用超过9次。所以，只要您稍稍用心，一切都变得so easy！！ <font style="color:red">记住，一定要追着妈妈好友闺密使用你的邀请码！</font>她们申请到了会感谢您！</font></p>
       <p style="color:red">专属VIP码使用超过10次，您的中奖几率将大大增加！<br>专属VIP码使用超过20次，您就具有决定性的竞争力啦！！</p>
       <p>亲，分享、邀请，继续加油吧，惊喜等着您！</p>
 
