--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -90,7 +90,7 @@
 	  {% endif %}
 	  
           {% if vip_exists %}
-          <p style="color:red">您有通关特权，无需邀请码!</p>
+          <p style="color:red">优尼美妈忠粉,无需邀请码!</p>
 	  <input class="form-control" type="text" placeholder="无需VIP邀请码" value="{{ vipcode }}" id="id_vipcode" status="1" disabled="disabled" name="vipcode"/>
 	  <input type="hidden" name="vip_exists" value="1">
 	  {% else %}
@@ -110,7 +110,7 @@
 	{% if started %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
         {% else %} 
-	  {% if openid == "oMt59uE55lLOV2KS6vYZ_d0dOl5c" %}
+	  {% if openid == "oMt59uGwyxgARNKTVxklPDEexaeU" %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
 	  {% else %}
 	  <button type="button" class="btn btn-warning" disabled="disabled">申请待开放...</button>
