--- a/shopmanager/shopapp/weixin/templates/weixin/ambass.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/ambass.html
@@ -44,6 +44,20 @@
     <li class="list-group-item"><a href="/weixin/ambassintention/">查看详情 >></a></li>
   </ul>
 {% else %}
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">什么是优尼大使项目？</div>
+    <div class="panel-body">
+      <p>移动互联网时代的浪潮来临，每个人都可以推荐、分享、传播，<font style="color:orange">每个人都有价值！</font></p>
+      <p>明星，比如张柏芝，拍奶粉广告要价1000万元人民币。明星有传播价值，因为她们可以影响千万人。</p>
+      <p>在互联网上的妈妈们，我们难以影响千万人。但我们有自己的圈子、朋友，我们可以影响几个、几十人。有谁来认可妈妈们的价值，并且，如果可以的话，为之付一点点费用呢？</p>
+      <p style="color:red">优尼世界，愿意！</p>
+      <p>优尼世界愿意认可您的价值，并为您的影响力支付费用！</p>
+      <p>当看到您的宝宝在优尼世界的睡袋里安睡，或在朋友圈看到您分享的可爱图片，您的朋友也来优尼世界购买，我们应该向您支付费用！</p>
+      <p>这就是<font style="color:orange">优尼大使</font>项目的初衷！</p>
+      <p>如果您认可优尼大使的项目的意义，请积极加入，开启优尼大使之旅吧！</p>
+    </div>
+  </div>
+
   <ul class="list-group">
     <li class="list-group-item">亲，要加入优尼大使计划，请咨询微信客服哦！</li>
   </ul>  
