--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -90,7 +90,7 @@
 	  {% endif %}
 	  
           {% if vip_exists %}
-          <p style="color:red">优尼美妈忠粉,无需邀请码!</p>
+          <p style="color:red">优尼美妈忠粉,无需邀请码即可申请!</p>
 	  <input class="form-control" type="text" placeholder="无需VIP邀请码" value="{{ vipcode }}" id="id_vipcode" status="1" disabled="disabled" name="vipcode"/>
 	  <input type="hidden" name="vip_exists" value="1">
 	  {% else %}
