--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -111,7 +111,7 @@
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
         {% else %} 
 	  {% if openid == "oMt59uGwyxgARNKTVxklPDEexaeU" %}
-	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
+	  <input type="button" class="btn btn-warning" value="提交试用申请"/>
 	  {% else %}
 	  <button type="button" class="btn btn-warning" disabled="disabled">申请待开放...</button>
 	  {% endif %}
