--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -2,9 +2,9 @@
 
 {% block title %} 
 {% if identical %}
-我刚在优尼世界申请了宝宝睡袋，礼盒包装免费寄到家哦！你也快去给宝宝领一件吧～～ 
+我刚在优尼世界申请了宝宝披风，礼盒包装免费寄到家哦！你也快去给宝宝领一件吧～～ 
 {% else %}
-优尼世界 8月送大礼！
+优尼世界 9月送大礼 时尚婴童斗篷免费送啦！
 {% endif %}
 {% endblock %}
 
@@ -13,7 +13,7 @@
 
 <div class="container-fluid">
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">关注优尼世界微信 精美睡袋免费送!!</div>
+    <div class="panel-heading" style="color:orange">优尼世界 时尚婴童斗篷免费送啦!</div>
     <div class="panel-body">
 
       {% if identical %}
@@ -21,7 +21,7 @@
 	<div class="col-xs-12">
 	  <p style="color:blue">亲，您的申请已经成功提交！</p>
 	  <p style="color:blue">你获得了专属VIP邀请码：{{ vipcode }}，快分享到你朋友圈吧!</p>
-	  <p style="color:blue">您的专属VIP邀请码被朋友<font style="color:red">使用20次以上</font>，您被选中的几率就大大提升啦！</p>
+	  <p style="color:blue">您的专属VIP邀请码被朋友<font style="color:red">使用10次以上</font>，您被选中的几率就大大提升啦！</p>
 	  <p style="color:blue;font-size:20px">分享朋友圈后蓝色文字只有你自己可以看见！</p>
 	</div>
       </div>
@@ -30,28 +30,38 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <div class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPF4esicxuYzMibQhriaicJFXdntMnicPf5cfQjNNibWUF8BJRn1RLURwOUmLKw/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3GC9Flq6Q7vwglrNkxIPZLIyYlUibDQ0R7qK4wMYlNkibm132jqZHj6icOFIvbIN1ZiaD0YzbXhgH6w/0" alt="...">
 	  </div>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，您没看错！是的，优尼世界的睡袋可以免费领啦！这款天猫、京东已经售出30000多件，好评如潮的睡袋，8月1日首次开放免费试用。快抢啊！！！</p>  
+	  <p>留美海归团队设计，独家专利花型，天猫最时尚婴童斗篷，现在免费啦！</p>
+	  <p>这款天猫、京东已经售出10000多件，好评如潮的婴童斗篷，首次开放免费试用。<font style="color:red">共有800份名额，机会多到数不清，快抢啊！！！</font></p>  
 	  {% if vipcode == "898786" %} 
 	  <p style="font-size:20px; color:red; text-align:center">您刚才输入的VIP邀请码错误，请用正确的VIP邀请码重新申请!</p>
 	  {% else %}
 	  <p style="font-size:20px; color:red; text-align:center">VIP邀请码: {{ vipcode }}</p>
 	  {% endif %}
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;关注【优尼世界】公众微信，[活动中心] -> [免费试用]，开始申请吧！</p>
+	  <p>关注【优尼世界】公众微信，到[活动中心] -> [免费试用]，开始申请吧！</p>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;哦，对了！这款睡袋还带下面的礼盒包装，直接免费寄到您手中，您是不是一下子觉得世界美好了很多呢～～～</p>
+	  <p>这款斗篷适用年龄<font style="color:red">0-6岁</font>。可为小宝宝做抱被抱毯，为大宝宝做披风外衣，穿上身绝对有范儿！</p>
 	  <div class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPFY79thGSwP9mNQ2LIUlADy0WkPFicz21qU159JvHap9VGIlgPVNAdnjw/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3GC9Flq6Q7vwglrNkxIPZHG6wlwyHfsXQvtYAO3FFUMiaaGIdBaNKhD70Hqsny443I0JAYqFtBwA/0" alt="...">
+	  </div>
+	</div>
+      </div>
+
+      <div class="row">
+	<div class="col-xs-12">
+	  <p>随斗篷一同免费寄给您的，还有精美礼盒包装，<font style="color:red">送人也绝对面子十足！</font></p>
+	  <div class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3GC9Flq6Q7vwglrNkxIPZw6an6GW2qKCkpFCA11zvJTGXiaAia8Nt526f342SPNXicmIVJliaakJq2w/0" alt="...">
 	  </div>
 	</div>
       </div>
@@ -59,10 +69,10 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，具体申请很简单：关注微信，然后申请就搞定啦！</p>
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;还有，悄悄告诉您：<font style="color:red">申请提交后的页面一定要分享到朋友圈哦，您的专属VIP邀请码被朋友<font style="color:red">使用20次以上</font>，您被选中的几率就大大提升啦！(朋友申请到了也会感激您！)</font></p>
+	  <p>亲，具体申请很简单：关注微信，然后申请就搞定啦！</p>
+	  <p>还有，悄悄告诉您：<font style="color:red">申请提交后的页面一定要分享到朋友圈哦，您的专属VIP邀请码被朋友<font style="color:red">使用10次以上</font>，您被选中的几率就大大提升啦！(朋友申请到了也会感激您！)</font></p>
 	  <div class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPFeuNDSQ8Mt2socAhafdNqaR1wIwHxvt8Lxbvzddr3h7s8qhXl0dt7eQ/0" alt="...">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3GC9Flq6Q7vwglrNkxIPZ7noJym3Hrh8MyBaYmGf3BibVUzic7n4hkaDicch99UCxB01kYwmFDpTew/0" alt="...">
 	  </div>
 	</div>
       </div>
