--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -52,12 +52,10 @@
 	    <img src="{{ sample.pic_url }}" alt="...">
 	  </a>
 
-	  {% if False %}
 	  {% if today_orders > 1000 %}
 	  <p>超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
 	  {% else %}
 	  <p>今日<font style="color:red; font-size:20px">{{ today_orders }}</font>人已申请</p>
-	  {% endif %}
 	  {% endif %}
 	</div>
 
@@ -143,7 +141,7 @@
     <h5 style="color:#3071a9">常见问题</h5>
     <p>1) VIP邀请码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找！也可向申请过的朋友索要VIP邀请码。</font></p>
     <p>2) 我收不到手机验证码? <font style="color:red">微信中输入0，根据提示操作。若一份钟没收到短信验证码，可以重复。</font></p>
-    <p>3) 什么是通关特权？<font style="color:red">在8月15日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都具有通关特权，无需输入VIP邀请码！</font></p>
+    <p>3) 哪些人无需邀请码申请？<font style="color:red">在8月15日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都无需输入VIP邀请码！</font></p>
   </div>
 </div>
 
