--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -42,7 +42,7 @@
       <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
       <div class="row">
 	<div class="col-xs-12">
-	  <p>距离试用申请开始还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额等您来抢哦！</p>
+	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
 	</div>
       </div>
       <div class="row">
