--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -44,7 +44,7 @@
 	  {% else %}
 	  <p style="font-size:20px; color:red; text-align:center">VIP邀请码: {{ vipcode }}</p>
 	  {% endif %}
-	  <p>关注【优尼世界】公众微信，到[活动中心] -> [免费试用]，开始申请吧！！<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点击直达申请页面 >></p>
+	  <p>关注【优尼世界】公众微信，到[活动中心] -> [免费试用]，开始申请吧！！</p>
 	</div>
       </div>
 
