--- a/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css" rel="stylesheet">
     
@@ -29,9 +29,9 @@
     {% endblock %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{{ STATIC_URL }}jquery/jquery.js"></script>
+    <script src="http://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     {% block tail_script %}
     {% endblock %}
