invite result text change

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -9,7 +9,7 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">公告</div>
     <div class="panel-body">
-      <p style="color:#e8792a">亲，优尼世界9月大礼即将登场：800件时尚婴幼儿斗篷/披风，加礼盒包装免费派送，<a href="/weixin/freesamples/">快来抢啊！ >> </a></p>
+      <p style="color:#e8792a">亲，优尼世界9月大礼：800件时尚婴幼儿斗篷/披风，加礼盒包装免费派送，<a href="/weixin/freesamples/">快来抢啊！ >> </a></p>
     </div>
   </div>
 
