--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -345,6 +345,6 @@
 
     
     </script>
-    <script src="{{ STATIC_URL }}jquery/jquery.cookie.js"></script>
+    <script src="{{ STATIC_URL }}jquery/jquery.cookie.js" type="text/javascript"></script>
 {% endblock %}
     
