js remove tags part

--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -155,10 +155,8 @@
 
 {% block tail_script %}
     <script type="text/javascript">
-      var tags = ["#id_year", "#id_month", "#id_sex"];
       var fields = ["#id_receiver_name", "#id_province", "#id_city", "#id_streetaddr"];
 
-      window.onload = autofill;
       
       function save2cookie(key) {
         var val = $(key).val();
@@ -168,20 +166,14 @@
         return $.cookie(key);
       }
 
-      function autofill() {
-         tags.forEach(function(tag) {
-           var val = getfromcookie(tag);
-           if (val) {
-             $(tag+"_"+val).attr("selected","selected");
-           }
-         });
+      $(function () {
          fields.forEach(function(field) {
            var val = getfromcookie(field);
            if (val) {
              $(field).val(val);
            }
          });
-      }
+      });
 
       function validateMobile(s) {
         var validateReg = /^((\+?86)|(\(\+86\)))?1\d{10}$/;
@@ -297,9 +289,6 @@
       
 
       function babyinfo() {
-	tags.forEach(function (tag) {
-          save2cookie(tag);
-        });
 	fields.forEach(function (field) {
           save2cookie(field);
         });
