--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -18,7 +18,14 @@
     <div class="panel-heading" style="color:orange">9月试用审核状态</div>
     <div class="panel-body">
       {% if has_order %}
+      {% if order_status > 10 %}
+      <p>亲，恭喜您，你的试用申请已<font style="color:red">审核通过</font>啦!</p>
+      <p>专属VIP邀请码<font style="color:red">{{ vipcode }}</font>已被使用<font style="color:red;font-size:20px">{{ usage_count }}</font>次!</p>
+      <p><a href="/weixin/payguide/">请仔细阅读中奖流程说明 >></a></p>
+      <p><a href="">阅读完以上说明之后，请点击进入兑奖 >></a></p>
+      {% else %}
       <p>亲，您的申请正在审核中。专属VIP邀请码<font style="color:red">{{ vipcode }}</font>已被使用<font style="color:red;font-size:20px">{{ usage_count }}</font>次，请继续加油！</p>
+      {% endif %}
       {% else %}
       <p style="color:#029fd6">亲，您还没有提交试用申请哦！</p>
       {% endif %}
